##################################################
 Revision history for Log::Log4perl
##################################################

1.28 (not yet released)
   *    (ms) Fixed caller stack with Buffer composite appender

1.27 (2010/02/07)
   *    (ms) ***WARNING: This might break backward compatibility 
                         with some wrapper classes. 
             [RT 52913] Fixed category fetching in
             wrapper classes (reported by Martin Evans). Wrapper classes
             now need to call Log::Log4perl->wrapper_register to adapt
             get_logger() category fetching. Detailed docs under 
             "Using Log::Log4perl with wrapper functions and classes"
   *    (ms) Made meta tag compatible with MakeMaker versions < 6.50
        (ms) [RT 52083] Fixed manifest glitch from 1.26 (reported by
             Lars Thegler).
   *    (ms) Added note to FAQ on 'no init happened' warnings for API 
             initializations, as suggested by Malcolm Nooning.
   *    (ms) Applied patch by Christopher Mckay which sets
             Log4perl::Logger::INITIALIZED only if it's fully initialized.
   *    (ms) Emmanuel Rodriguez suggested changing TestBuffer's reset() 
             method to leave the logger population alone. Added clear()
             to accomodate the need for a single buffer reset.
   *    (ms) Xavier Caron added %p{1} to allow abbreviated priority
             strings in the pattern layout.
   *    (ms) Redid composite appenders to address problems with incorrect
             caller() data. L4p now supports a $cache parameter to be 
             passed to the log() function, which stores the completely
             rendered message and can be passed to log_cached() later on.

1.26 (2009/11/22)
    *   (ms) [RT 50495] Perl code in the config file is now evaluated/
             compiled after the configuration parser has done its work, 
             opening up Perl subroutines to all configuration parsers, not